Fix errors with leading whitespace
This fixes langs like Swift who put a caret under the place of the
error.

Closes #501

--- a/css/hole.css
+++ b/css/hole.css
@@ -59,7 +59,7 @@ main .info {
 
 #arg, #err { display: none }
 
-#exp, #out { white-space: pre }
+#err, #exp, #out { white-space: pre }
 
 #arg span {
     background: var(--arg-background);
